--- a/src/app/components/add-todo/add-todo.component.html
+++ b/src/app/components/add-todo/add-todo.component.html
@@ -1,1 +1,4 @@
-<p>add-todo works!</p>
+<form class="input-group mb-3 form" ngNativeValidate #form (ngSubmit)='form.checkValidity()? onSubmit():null'>
+    <input type="text" name="title" class="form-control" placeholder="Please add Todo here..." aria-label="Recipient's username" aria-describedby="button-addon2" [(ngModel)]="title" required>
+    <input class="btn btn-outline-secondary btn" [ngClass]="" type="submit" value='submit' id="button-addon2">
+</form>
