--- a/src/app/components/layout/header/header.component.html
+++ b/src/app/components/layout/header/header.component.html
@@ -1,3 +1,7 @@
 <header ngClass="header">
     <h1>TodoList</h1>
+    
+    <a routerLink='/'>Home</a> | 
+    <a routerLink='/about'>About</a>
+    
 </header>
