--- a/src/app/page/about/about.component.html
+++ b/src/app/page/about/about.component.html
@@ -1,1 +1,14 @@
-<p>about works!</p>
+<div class="container">
+    <h1 class="bd-title" id="content">About</h1>
+    <p class="bd-lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem facilis itaque saepe nostrum cum consectetur quam in iusto. Voluptatum illo dolor temporibus veritatis aut animi laborum perspiciatis labore eaque laudantium.</p>
+
+    <h2 id="team">
+        <div>Team<a class="anchorjs-link " href="#team" aria-label="Anchor" data-anchorjs-icon="#"
+                style="padding-left: 0.375em;"></a></div>
+    </h2>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum perferendis dolor natus porro cupiditate blanditiis tempore repudiandae doloribus, ipsum, similique non rerum nulla architecto laudantium quae nobis sit officia saepe?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Est rerum ex aliquid voluptate sunt consectetur commodi, harum delectus reprehenderit esse assumenda repellendus incidunt, sapiente ipsum eligendi illum architecto, amet ipsam!
+    </p>
+
+    </div>
