--- a/src/app/components/to-do-item/to-do-item.component.css
+++ b/src/app/components/to-do-item/to-do-item.component.css
@@ -1,24 +1,31 @@
 .del {
-    background: #ff0000;
-    color: #fff;
-    border: none;
-    padding: 5px 9px;
-    border-radius: 50%;
-    cursor: pointer;
-    float: right;
-  }
-  
-  .todo {
-    background: #f4f4f4;
-    padding: 10px;
-    border-bottom: 1px #ccc dotted;
-  }
-  
-  .is-complete {
-    text-decoration: line-through;
-  }
+  background: #ff0000;
+  color: #fff;
+  border: none;
+  padding: 5px 9px;
+  border-radius: 50%;
+  cursor: pointer;
+  float: right;
+}
 
-  .is-complete {
-    text-decoration: line-through;
-  }
+input[type='checkbox']{
+  float: left;
+  margin-top: 5px;
+}
 
+.todo {
+  background: #f4f4f4;
+  padding: 10px;
+  border-bottom: 1px #ccc dotted;
+}
+
+.is-complete {
+  text-decoration: line-through;
+}
+
+.todoTitle{
+  display: inline-block;
+  margin-left: 10px;
+  width: 75%;
+  vertical-align: top;
+}
