css line-though fix

--- a/src/app/components/to-do-item/to-do-item.component.css
+++ b/src/app/components/to-do-item/to-do-item.component.css
@@ -19,7 +19,7 @@ input[type='checkbox']{
   border-bottom: 1px #ccc dotted;
 }
 
-.is-complete {
+.is-complete p{
   text-decoration: line-through;
 }
 
